--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,15 @@ body {
 }
 
 .container {
-  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
+}
+
+.container-form {
+  padding: 30px;
+  width: 400px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -69,6 +76,7 @@ body {
 .todoList,
 .doneList {
   display: flex;
+  width: 100%;
   flex-direction: column;
   padding: 30px;
   gap: 10px;
@@ -97,4 +105,47 @@ body {
 
 .emptyData {
   margin: 0 auto;
+}
+
+header {
+  padding: 20px;
+}
+
+.profile {
+  display: flex;
+  gap: 5px;
+}
+
+.profile-detail {
+  display: flex;
+}
+
+.profile-img {
+  width: 40px;
+  height: 40px;
+}
+
+.profile-detail {
+  display: flex;
+  flex-direction: column;
+}
+
+.time {
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 400px) {
+  body {
+    font-size: 16px;
+  }
+
+  .container-form {
+    width: 600px;
+  }
+
+  .todoList,
+  .doneList {
+    width: 600px;
+  }
 }
