--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,40 @@ body {
   font-size: 14px;
 }
 
+.form-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.form-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -123,6 +157,7 @@ header {
 .profile-img {
   width: 40px;
   height: 40px;
+  border-radius: 5px;
 }
 
 .profile-detail {
